        

- Alumnos
    - rematriculacion
        - Se registraba mal la condicion de la cursada.
        - No te podias bajar si elegias libre.
    - general
        - Ya se puede usar $alumno->iniciales() y $alumno->primerNombre().
            recordar que auth()->user() es lo mismo que $alumno.
    - Carreras/Cursadas
        - Opcion de exportar cursadas directamente desde la tabla principal de Carreras.
    - Cursadas
        - Luego de eliminar se redirigia a la misma cursada la cual ya no existe por lo que se obtenia un 404.
    - Examenes
        - Ya no se muestra el vocal 2 en las mesas que no cuenten con este.
    - Inscripciones/Mesas
        - Ya no se muestra el vocal 2 en las mesas que no cuenten con este.

- profesores
    - Ahora tienen botones para imprimir los 3 tipos de acta volante.


--------------------------------------------------------------
9 de noviembre
--------------------------------------------------------------



--------------------------------------------------------------
PROXIMAMENTE / POR HACER (DEJAR ESTE APARTADO SIEMPRE AL FINAL)
--------------------------------------------------------------

- Admin
    - Alumnos
        - No permitir 2 alumnos con el mismo mail, y tal vez mismo dni.
        - Avisar cuando 2 alumnos con el mismo numero de telefono.
    - Mesas creacion masiva
        - Agregar validaciones (mesa en dia no habil, dia feriado, etc)
    - Diseño general
        - Enviar botones de eliminar abajo.
        - Idear una confirmacion antes de eliminar un registro.
        - Lograr que el mail de contacto y numero de telefono sean configurables.
    - Carreras
        - Pensar en si se puede cargar archivos como resoluciones, etc
    - Cursadas
        - En la tabla principal y al editar, no se menciona de que carrera es la cursada.
    - DB
        - Pensar en como hacer una copia de seguridad.
-Profesores
    - Agregar footer