@@ -5,6 +5,7 @@ namespace App\Repositories;
 use App\Models\Carrera;
 use App\Models\Configuracion;
 use App\Models\Cursada;
+use App\Models\Examen;
 use Illuminate\Support\Facades\Auth;
 
 class AlumnoDataRepository
@@ -16,7 +17,21 @@ class AlumnoDataRepository
     }
 
 
-    function examenes(){}
+    function examenes($filtro,$campo,$orden){
+        $examenes = Examen::join('asignaturas', 'asignaturas.id','examenes.id_asignatura')
+        -> where('asignaturas.id_carrera', Carrera::getDefault()->id)
+        -> where('examenes.id_alumno', Auth::id())
+        -> when($filtro, fn($query) => $query->where('asignaturas.nombre','LIKE',"%$filtro%"))
+        -> when($campo=='aprobadas',fn($query) => $query->where('examenes.nota','>=',4))
+        -> when($campo=='desaprobadas',fn($query) => $query->where('examenes.nota','<',4))
+        -> orderBy('asignaturas.anio')
+        -> orderBy('asignaturas.id')
+        -> orderBy('examenes.fecha')
+        -> orderBy('examenes.nota','desc')
+        -> get();
+
+        return $examenes;
+    }
     
     function cursadas($filtro, $campo, $orden){
 
